# dgmt

./: .gitignore  README.md  config.example.json  dgmt.py  install-linux.sh  install-windows.bat  pyproject.toml  setup-task.ps1  uninstall-windows.bat
src/dgmt/: __init__.py  __main__.py
src/dgmt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/dgmt/backends/: __init__.py  base.py  rclone.py  registry.py  sftp.py  syncthing.py
src/dgmt/calendar/: __init__.py  api.py  auth.py  colors.py  models.py
src/dgmt/calendar/cli/: __init__.py  commands.py
src/dgmt/calendar/tui/: __init__.py  app.py  color_picker.py  confirm_modal.py  daily.py  event_form.py  monthly.py  scope_modal.py  weekly.py
src/dgmt/canvas/: __init__.py  cli.py  completion.py  fetcher.py  formatter.py  models.py  parser.py
src/dgmt/cli/: __init__.py  formatters.py  main.py
src/dgmt/cli/commands/: config.py  install.py  mcp.py  remote.py  sync.py
src/dgmt/core/: __init__.py  config.py  daemon.py  shutdown.py  watcher.py
src/dgmt/mcp/: __init__.py  server.py  tools.py
src/dgmt/remote/: __init__.py  config_parser.py  config_sync.py  setup.py  spoke.py  ssh.py
src/dgmt/service/: __init__.py  base.py  factory.py  linux.py  windows.py
src/dgmt/utils/: __init__.py  fluent.py  logging.py  paths.py
